# gdoc

./: .gitignore  README.md  README.rst  makefile  mkdocs.yml  package-lock.json  package.json  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  doxybook  plantuml  postCreateCommand
docs/: PandocAst.md  reference.md  sample_ProjectManagement.md
docs/ArchitecturalDesign/: ArchitecturalDesign.md  ArchitecturalDesign.puml  PandocAst.md
docs/GdocMarkupLanguage/: GdocMarkupLanguage.md  GdocMarkupLanguage.puml  GdocObjectFormat.md  GdocObjectFormat.puml  Properties.md  README.md
docs/Requirements/: SoftwareRequirementsSpecification.md
doxy/: Doxyfile  autodocstring.mustache  doxybook2cfg.json
doxy/html/: annotated.html  classes.html  classgdoc_1_1lib_1_1debug_1_1Debug-members.html  classgdoc_1_1lib_1_1debug_1_1Debug.html  classgdoc_1_1lib_1_1gdom_1_1BlockTag-members.html  classgdoc_1_1lib_1_1gdom_1_1BlockTag.html  classgdoc_1_1lib_1_1gdom_1_1Element-members.html  classgdoc_1_1lib_1_1gdom_1_1Element.html  classgdoc_1_1lib_1_1gdom_1_1Element__inherit__graph.map  classgdoc_1_1lib_1_1gdom_1_1Element__inherit__graph.md5  classgdoc_1_1lib_1_1gdom_1_1GdocObjectModel-members.html  classgdoc_1_1lib_1_1gdom_1_1GdocObjectModel.html  classgdoc_1_1lib_1_1gdom_1_1GdocObjectModel__coll__graph.map  classgdoc_1_1lib_1_1gdom_1_1GdocObjectModel__inherit__graph.md5  classgdoc_1_1lib_1_1gdom_1_1Object-members.html  classgdoc_1_1lib_1_1gdom_1_1Object.html  classgdoc_1_1lib_1_1gdom_1_1Object__coll__graph.map  classgdoc_1_1lib_1_1gdom_1_1Object__coll__graph.md5  classgdoc_1_1lib_1_1gdom_1_1Object__inherit__graph.map  classgdoc_1_1lib_1_1gdom_1_1Object__inherit__graph.md5  classgdoc_1_1lib_1_1gdom_1_1Package-members.html  classgdoc_1_1lib_1_1gdom_1_1Package.html  classgdoc_1_1lib_1_1gdom_1_1PackageManager-members.html  classgdoc_1_1lib_1_1gdom_1_1PackageManager.html  (+169 more)
gdoc/: __init__.py  __main__.py
spec/: __init__.py
src/: __init__.py  __main__.py
tests/: __init__.py  test_gdoc.py
vscode/: extension.js
(+362 files in other folders)
