[tool.poetry]
name = "gdoc"
version = "0.1.0"
description = "Ghost documentation"
authors = ["Tsuyoshi Kodama <tsuyoshi.kodama@byrnison.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.5b1"
isort = "^5.8.0"
mypy = "^0.812"
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
pytest-datadir = "^1.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
