[tool.poetry]
name = "gdoc"
version = "0.1.0"
description = "Ghost documentation"
authors = ["Tsuyoshi Kodama <tsuyoshi.kodama@byrnison.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.961"
pytest = "^7.1.2"
pytest-mock = "^3.7.0"
pytest-datadir = "^1.3.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[flake8]
max-line-length = 100
