[tool.poetry]
name = "gdoc"
version = "0.1.1"
description = "A tool to process GDML(GDoc Markup Language) documents."
authors = ["Tsuyoshi Kodama <tsuyoshi.kodama@byrnison.com>"]
license = "MIT"

[tool.poetry.scripts]
gdoc = "gdoc.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.961"
pytest = "^7.1.2"
pytest-mock = "^3.7.0"
pytest-datadir = "^1.3.1"
pytest-cov = "^3.0.0"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.3.1"
mkdocstrings = {extras = ["crystal", "python"], version = "^0.19.0"}
mkdocs-material = "^8.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90

[tool.isort]
profile = "black"
line_length = 90

[flake8]
max-line-length = 90
ignore = "E203"
